# bluezqt-plasmoid

./: CMakeLists.txt  Messages.sh  README.md
package/: metadata.desktop
package/contents/code/: logic.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: BluetoothApplet.qml  CompactRepresentation.qml  ConfigGeneral.qml  DeviceItem.qml  FullRepresentation.qml  Header.qml  SwitchButton.qml  Toolbar.qml
plugin/: CMakeLists.txt  bluetoothplugin.cpp  devicesproxymodel.cpp  devicesproxymodel.h  launchapp.cpp  launchapp.h  notify.cpp  notify.h  qmldir
